--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,11 @@ defaults: &defaults
               docker login -u ${DOCKER_LOGIN} -p ${DOCKER_PASSWORD}
             fi
       - checkout
+      - run:
+          name: Get QEMU user mode processor emulation binaries
+          command: |
+            curl -L -s "https://github.com/hassio-addons/qemu-user-static/releases/download/v2.10.1/qemu-aarch64-static.tar.gz" | tar zxvf - -C ./debian-base/rootfs/usr/bin/
+            curl -L -s "https://github.com/hassio-addons/qemu-user-static/releases/download/v2.10.1/qemu-arm-static.tar.gz" | tar zxvf - -C ./debian-base/rootfs/usr/bin/
       - deploy:
           name: Build and (maybe) deploy
           command: |
