--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,4 +1,4 @@
-ARG BUILD_FROM=debian:stretch-slim
+ARG BUILD_FROM=debian:buster-20191118-slim
 # hadolint ignore=DL3006
 FROM ${BUILD_FROM}
 
@@ -10,10 +10,13 @@ ENV \
     PS1="$(whoami)@$(hostname):$(pwd)$ " \
     S6_BEHAVIOUR_IF_STAGE2_FAILS=2 \
     S6_CMD_WAIT_FOR_SERVICES=1 \
-    TERM="xterm"
+    TERM="xterm-256color"
 
 # Copy root filesystem
 COPY rootfs /
+
+# Set shell
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install base system
 ARG BUILD_ARCH=amd64
@@ -21,34 +24,37 @@ RUN \
     apt-get update \
     \
     && apt-get install -y --no-install-recommends \
-        bash=4.4-5 \
-        ca-certificates=20161130+nmu1 \
-        curl=7.52.1-5+deb9u5 \
-        jq=1.5+dfsg-1.3 \
-        tzdata=2018e-0+deb9u1 \
+        bash=5.0-4 \
+        ca-certificates=20190110 \
+        curl=7.64.0-4 \
+        jq=1.5+dfsg-2+b1 \
+        tzdata=2019c-0+deb10u1 \
     \
-    && if [ "${BUILD_ARCH}" = "i386" ]; then S6_ARCH="x86"; else S6_ARCH="${BUILD_ARCH}"; fi \
+    && S6_ARCH="${BUILD_ARCH}" \
+    && if [ "${BUILD_ARCH}" = "i386" ]; then S6_ARCH="x86"; fi \
+    && if [ "${BUILD_ARCH}" = "armv7" ]; then S6_ARCH="arm"; fi \
+    && if [ "${BUILD_ARCH}" = "armhf" ]; then S6_ARCH="armhf"; fi \
     \
-    && curl -L -s "https://github.com/just-containers/s6-overlay/releases/download/v1.21.4.0/s6-overlay-${S6_ARCH}.tar.gz" \
+    && curl -L -s "https://github.com/just-containers/s6-overlay/releases/download/v1.22.1.0/s6-overlay-${S6_ARCH}.tar.gz" \
         | tar zxvf - -C / \
     \
     && mkdir -p /etc/fix-attrs.d \
     && mkdir -p /etc/services.d \
     \
-    && \
-        if [ "${BUILD_ARCH}" != "armhf" ]; then \
-            rm -f /usr/bin/qemu-arm-static; \
-        fi \
+    && curl -J -L -o /tmp/bashio.tar.gz \
+        "https://github.com/hassio-addons/bashio/archive/v0.6.0.tar.gz" \
+    && mkdir /tmp/bashio \
+    && tar zxvf \
+        /tmp/bashio.tar.gz \
+        --strip 1 -C /tmp/bashio \
     \
-    && \
-        if [ "${BUILD_ARCH}" != "aarch64" ]; then \
-            rm -f /usr/bin/qemu-aarch64-static; \
-        fi \
+    && mv /tmp/bashio/lib /usr/lib/bashio \
+    && ln -s /usr/lib/bashio/bashio /usr/bin/bashio \
     \
-    && rm -f -r /tmp/* \
-    && rm -rf /var/lib/apt/lists/* \
-    && rm -rf /var/lib/{apt,dpkg,cache,log}/* \
-    && rm -rf /var/{cache,log}/*
+    && rm -fr \
+        /tmp/* \
+        /var/{cache,log}/* \
+        /var/lib/apt/lists/*
 
 # Entrypoint & CMD
 ENTRYPOINT [ "/init" ]
@@ -63,8 +69,11 @@ LABEL \
     io.hass.name="Addon Debian base for ${BUILD_ARCH}" \
     io.hass.description="Community Hass.io Add-ons: ${BUILD_ARCH} Debian base image" \
     io.hass.arch="${BUILD_ARCH}" \
-    io.hass.type="addon" \
+    io.hass.type="base" \
     io.hass.version=${BUILD_VERSION} \
+    io.hass.base.version=${BUILD_VERSION} \
+    io.hass.base.name="debian" \
+    io.hass.base.image="hassioaddons/debian-base" \
     maintainer="Franck Nijhof <frenck@addons.community>" \
     org.label-schema.description="Community Hass.io Add-ons: ${BUILD_ARCH} Debian base image" \
     org.label-schema.build-date=${BUILD_DATE} \
