--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -67,7 +67,7 @@ ARG BUILD_VERSION
 # Labels
 LABEL \
     io.hass.name="Addon Debian base for ${BUILD_ARCH}" \
-    io.hass.description="Community Hass.io Add-ons: ${BUILD_ARCH} Debian base image" \
+    io.hass.description="Community Home Assistant Add-on: ${BUILD_ARCH} Debian base image" \
     io.hass.arch="${BUILD_ARCH}" \
     io.hass.type="base" \
     io.hass.version=${BUILD_VERSION} \
@@ -75,7 +75,7 @@ LABEL \
     io.hass.base.name="debian" \
     io.hass.base.image="hassioaddons/debian-base" \
     maintainer="Franck Nijhof <frenck@addons.community>" \
-    org.label-schema.description="Community Hass.io Add-ons: ${BUILD_ARCH} Debian base image" \
+    org.label-schema.description="Community Home Assistant Add-on: ${BUILD_ARCH} Debian base image" \
     org.label-schema.build-date=${BUILD_DATE} \
     org.label-schema.name="Addon Debian base for ${BUILD_ARCH}" \
     org.label-schema.schema-version="1.0" \
@@ -83,4 +83,4 @@ LABEL \
     org.label-schema.usage="https://github.com/hassio-addons/addon-debian-base/blob/master/README.md" \
     org.label-schema.vcs-ref=${REF} \
     org.label-schema.vcs-url="https://github.com/hassio-addons/addon-debian-base" \
-    org.label-schema.vendor="Franck Nijhof"
+    org.label-schema.vendor="Community Home Assistant Add-ons"
