--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,6 +1,6 @@
 ---
 repository:
-  description: "Docker base images (Debian) - Community Home Assistant Add-ons"
+  description: "Docker base images (Debian) - Home Assistant Community Add-ons"
   homepage: https://addons.community
   topics: docker, baseimage, baseimage-docker, addons, homeassistant, home-assistant, debian
   private: false
