--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -75,12 +75,14 @@ LABEL \
     io.hass.base.name="debian" \
     io.hass.base.image="hassioaddons/debian-base" \
     maintainer="Franck Nijhof <frenck@addons.community>" \
-    org.label-schema.description="Home Assistant Community Add-on: ${BUILD_ARCH} Debian base image" \
-    org.label-schema.build-date=${BUILD_DATE} \
-    org.label-schema.name="Addon Debian base for ${BUILD_ARCH}" \
-    org.label-schema.schema-version="1.0" \
-    org.label-schema.url="http://addons.community" \
-    org.label-schema.usage="https://github.com/hassio-addons/addon-debian-base/blob/master/README.md" \
-    org.label-schema.vcs-ref=${REF} \
-    org.label-schema.vcs-url="https://github.com/hassio-addons/addon-debian-base" \
-    org.label-schema.vendor="Home Assistant Community Add-ons"
+    org.opencontainers.image.title="Addon Debian base for ${BUILD_ARCH}" \
+    org.opencontainers.image.description="Home Assistant Community Add-on: ${BUILD_ARCH} Debian base image" \
+    org.opencontainers.image.vendor="Home Assistant Community Add-ons" \
+    org.opencontainers.image.authors="Franck Nijhof <frenck@addons.community>" \
+    org.opencontainers.image.licenses="MIT" \
+    org.opencontainers.image.url="https://addons.community" \
+    org.opencontainers.image.source="https://github.com/hassio-addons/addon-debian-base" \
+    org.opencontainers.image.documentation="https://github.com/hassio-addons/addon-debian-base/blob/master/README.md" \
+    org.opencontainers.image.created=${BUILD_DATE} \
+    org.opencontainers.image.revision=${BUILD_REF} \
+    org.opencontainers.image.version=${BUILD_VERSION}
