Temp disable hadolint warning for debug

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -19,6 +19,7 @@ COPY rootfs /
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install base system
+# hadolint ignore=DL4001
 ARG BUILD_ARCH=amd64
 RUN \
     apt-get update \
