--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -53,6 +53,10 @@ RUN \
     && mv /tmp/bashio/lib /usr/lib/bashio \
     && ln -s /usr/lib/bashio/bashio /usr/bin/bashio \
     \
+    && curl -L -s -o /usr/bin/tempio \
+        "https://github.com/home-assistant/tempio/releases/download/2021.01.0/tempio_${BUILD_ARCH}" \
+    && chmod a+x /usr/bin/tempio \
+    \
     && rm -fr \
         /tmp/* \
         /var/{cache,log}/* \
