--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -30,7 +30,7 @@ RUN \
         curl=7.74.0-1.3+deb11u1 \
         jq=1.6-2.1 \
         tzdata=2021a-1+deb11u4 \
-        xz-utils=5.2.5-2 \
+        xz-utils=5.2.5-2.1~deb11u1 \
     \
     && c_rehash \
     \
