Fix intermittent `unable to s6_svstatus_read` error

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -17,6 +17,7 @@ ENV \
     S6_BEHAVIOUR_IF_STAGE2_FAILS=2 \
     S6_CMD_WAIT_FOR_SERVICES_MAXTIME=0 \
     S6_CMD_WAIT_FOR_SERVICES=1 \
+    S6_SERVICES_READYTIME=50 \
     YARN_HTTP_TIMEOUT=1000000 \
     TERM="xterm-256color"
 
