--- a/base/build.yaml
+++ b/base/build.yaml
@@ -1,9 +1,9 @@
 ---
 build_from:
-  aarch64: arm64v8/debian:bullseye-20230208-slim
-  amd64: amd64/debian:bullseye-20230208-slim
-  armhf: arm32v5/debian:bullseye-20230208-slim
-  armv7: arm32v7/debian:bullseye-20230208-slim
-  i386: i386/debian:bullseye-20230208-slim
+  aarch64: arm64v8/debian:11.6-slim
+  amd64: amd64/debian:11.6-slim
+  armhf: arm32v5/debian:11.6-slim
+  armv7: arm32v7/debian:11.6-slim
+  i386: i386/debian:11.6-slim
 codenotary:
   signer: codenotary@frenck.dev
